--- a/app/src/main/res/drawable/shape_rect_outline_d2d2d2_r6.xml
+++ b/app/src/main/res/drawable/shape_rect_outline_d2d2d2_r6.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="@color/color_ff875a"
-        android:endColor="@color/color_e60314"/>
+
+    <stroke android:width="1px"
+        android:color="@color/color_d2d2d2"/>
     <corners android:radius="@dimen/dp_16"/>
 </shape>
