--- a/app/src/main/res/drawable/shape_rect_outline_e60516_r6.xml
+++ b/app/src/main/res/drawable/shape_rect_outline_e60516_r6.xml
@@ -4,6 +4,6 @@
 
     <stroke android:width="1px"
         android:color="@color/color_e60516"/>
-    <solid android:color="@color/transparent"/>
+    <solid android:color="@color/white"/>
     <corners android:radius="@dimen/dp_16"/>
 </shape>
