--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,16 +35,15 @@
     <Button
         android:id="@+id/smsLogin"
         style="@style/common_button"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_20"
         android:text="登录"
         />
-    <TextView
+    <Button
         android:id="@+id/register"
         android:background="@drawable/shape_rect_outline_e60516_r6"
         style="@style/common_button"
         android:layout_marginTop="@dimen/dp_15"
         android:text="注册"
-        android:gravity="center"
         android:textColor="@color/color_e60516"
         />
 
@@ -53,7 +52,7 @@
         android:layout_gravity="center_horizontal"
         android:textSize="@dimen/sp_12"
         android:textColor="@color/light_gray"
-        android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="账号密码登录"
@@ -64,31 +63,37 @@
         android:layout_height="1px"
         />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dp_20"
-        android:src="@drawable/icon_third_login" />
 
     <LinearLayout
-        android:layout_marginTop="@dimen/dp_15"
-        android:gravity="center"
+        android:gravity="center|bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <ImageView
-            android:id="@+id/qqLogin"
-            android:layout_marginRight="@dimen/dp_15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_login_qq" />
-        <ImageView
-            android:id="@+id/wxLogin"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:src="@drawable/icon_third_login" />
+        <LinearLayout
+            android:layout_marginBottom="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_10"
+            android:gravity="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_login_wx" />
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/qqLogin"
+                android:layout_marginRight="@dimen/dp_20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_login_qq" />
+            <ImageView
+                android:id="@+id/wxLogin"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_login_wx" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
