--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,16 @@
     </style>
 
 
+
+
+
+
+
+
+
+
+
+
     <!--加载对话框-->
     <style name="loading_dialog" parent="android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
@@ -34,24 +44,22 @@
         <item name="android:drawablePadding">@dimen/dp_5</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingRight">@dimen/dp_10</item>
-        <item name="android:paddingLeft">@dimen/dp_10</item>
+        <item name="android:paddingRight">@dimen/dp_12</item>
+        <item name="android:paddingLeft">@dimen/dp_12</item>
         <item name="android:paddingTop">@dimen/dp_8</item>
         <item name="android:paddingBottom">@dimen/dp_8</item>
-        <item name="android:inputType">number</item>
-        <item name="android:maxLength">11</item>
     </style>
 
     <!--获取验证码的edittext样式-->
     <style name="get_sms_code">
         <item name="android:drawableLeft">@drawable/icon_login_key</item>
         <item name="android:background">@drawable/shape_rect_outline_d2d2d2_r6</item>
-        <item name="android:textSize">@dimen/sp_14</item>
+        <item name="android:textSize">@dimen/sp_13</item>
         <item name="android:drawablePadding">@dimen/dp_5</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dp_36</item>
         <item name="android:paddingRight">@dimen/dp_10</item>
-        <item name="android:paddingLeft">@dimen/dp_10</item>
+        <item name="android:paddingLeft">@dimen/dp_12</item>
         <item name="android:paddingTop">@dimen/dp_8</item>
         <item name="android:paddingBottom">@dimen/dp_8</item>
         <item name="android:inputType">number</item>
@@ -61,13 +69,24 @@
     <!--按钮的公共样式-->
     <style name="common_button">
         <item name="android:minHeight">@dimen/dp_1</item>
-        <item name="android:layout_height">@dimen/dp_38</item>
+        <item name="android:layout_height">@dimen/dp_40</item>
         <item name="android:textSize">@dimen/sp_14</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:background">@drawable/shape_gradient_ff875a_e60314</item>
+        <item name="android:background">@drawable/select_common_button</item>
         <item name="android:layout_marginLeft">@dimen/dp_40</item>
         <item name="android:layout_marginRight">@dimen/dp_40</item>
     </style>
+
+    <!--tabs指示器样式-->
+    <declare-styleable name="TabsLayout">
+        <attr name="titles" format="string" />
+        <attr name="selectColor" format="color" />
+        <attr name="unSelectColor" format="color" />
+        <attr name="indicatorColor" format="color" />
+        <attr name="animDuring" format="integer" />
+        <attr name="titleSize" format="dimension" />
+        <attr name="showBottomLine" format="boolean" />
+    </declare-styleable>
 
 </resources>
