--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,13 +6,18 @@
     <color name="color_ff875a">#ff875a</color>
     <color name="color_e60314">#e60314</color>
     <color name="color_f44f37">#f15d47</color>
+    <color name="color_ff7900">#ff7900</color>
     <color name="color_d2d2d2">#d2d2d2</color>
     <color name="white">#ffffff</color>
     <color name="color_eb4a56">#eb4a56</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="gray">#6b6969</color>
+    <color name="drak_gray">#2b2b2b</color>
     <color name="red">#ff0000</color>
     <color name="black">#000000</color>
     <color name="light_gray">#a19f9f</color>
     <color name="color_e60516">#e60516</color>
+    <color name="color_e1e1e1">#e1e1e1</color>
+    <color name="color_999999">#999999</color>
+    <color name="color_eeeeee">#eeeeee</color>
 </resources>
